--- a/package.json
+++ b/package.json
@@ -1,52 +1,50 @@
 {
-  "name": "portifolio",
-  "version": "1.0.0",
-  "description": "My portifolio",
-  "main": "index.js",
-  "scripts": {
-    "test": "test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/renanmfd/portifolio.git"
-  },
-  "keywords": [
-    "portifolio",
-    "web",
-    "design",
-    "renanmfd",
-    "site"
-  ],
-  "author": "Renan Dias",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/renanmfd/portifolio/issues"
-  },
-  "homepage": "https://github.com/renanmfd/portifolio#readme",
-  "devDependencies": {
-    "browser-sync": "*",
-    "es6-promise": "*",
-    "gulp": "*",
-    "gulp-autoprefixer": "*",
-    "gulp-browserify": "*",
-    "gulp-cache": "*",
-    "gulp-clean-css": "*",
-    "gulp-concat": "*",
-    "gulp-csscomb": "*",
-    "gulp-data": "^1.2.1",
-    "gulp-debug": "^2.1.2",
-    "gulp-frontnote": "*",
-    "gulp-imagemin": "*",
-    "gulp-jade": "^1.1.0",
-    "gulp-jshint": "*",
-    "gulp-less": "^3.0.5",
-    "gulp-minify-html": "*",
-    "gulp-notify": "*",
-    "gulp-plumber": "*",
-    "gulp-rename": "*",
-    "gulp-sourcemaps": "*",
-    "gulp-uglify": "*",
-    "jshint": "^2.9.1",
-    "path": "^0.12.7"
-  }
+    "name": "portifolio",
+    "version": "1.0.0",
+    "description": "Developer Renan Dias portifólio",
+    "main": "app/index.html",
+    "scripts": {
+        "test": "test"
+    },
+    "repository": {
+        "type": "git",
+        "url": "no repo"
+    },
+    "keywords": [
+        "nodejs",
+        "npm",
+        "gulp",
+        "html",
+        "css",
+        "js",
+        "portifolio",
+        "renanmfd",
+        "Renan Dias"
+    ],
+    "author": "Tursites",
+    "license": "ISC",
+    "devDependencies": {
+        "autoprefixer": "^6.3.6",
+        "browser-sync": "^2.12.3",
+        "gulp": "^3.9.1",
+        "gulp-cached": "^1.1.0",
+        "gulp-complexity": "^0.3.2",
+        "gulp-data": "^1.2.1",
+        "gulp-eslint": "^2.0.0",
+        "gulp-favicons": "^2.2.6",
+        "gulp-imagemin": "^2.4.0",
+        "gulp-jade": "^1.1.0",
+        "gulp-jadelint": "^0.1.0",
+        "gulp-less": "^3.0.5",
+        "gulp-lesshint": "^1.1.0",
+        "gulp-plumber": "^1.1.0",
+        "gulp-rename": "^1.2.2",
+        "gulp-sourcemaps": "^2.0.0-alpha",
+        "gulp-uglify": "^1.5.3",
+        "gulp-util": "^3.0.7",
+        "less-plugin-autoprefix": "^1.5.1",
+        "less-plugin-clean-css": "^1.5.1",
+        "less-plugin-csscomb": "0.0.2",
+        "path": "^0.12.7"
+    }
 }
