header and footer small

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Developer Renan Dias portifólio",
   "main": "app/index.html",
   "scripts": {
-    "test": "npm i -g gulp && gulp test"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
